--- a/index.html
+++ b/index.html
@@ -10,3 +10,13 @@
     <!-- Your code here -->
   </body>
 </html>
+<img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/hostedimages/1536801913i/26294106._SX540_.jpg" />
+<img 
+  src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/hostedimages/1536801913i/26294106._SX540_.jpg"
+  alt="The Banished Lands"
+  />
+  <img
+  src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/hostedimages/1536801913i/26294106._SX540_.jpg"
+  alt="The Banished Lands"
+  title="Tenebral is Evil"
+  />
